--- a/index.html
+++ b/index.html
@@ -11,24 +11,14 @@
   <body>
     <div class="greetings">
       <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-      <span>H</span>
-      <span>A</span>
-      <span>P</span>
-      <span>P</span>
-      <span>Y</span>
-      <span>G</span>
-      <span>R</span>
-      <span>A</span>
-      <span>D</span>
-      <span>U</span>
-      <span>A</span>
-      <span>T</span>
-      <span>I</span>
+      <span>S</span>
       <span>O</span>
-      <span>N</span>
+      <span>O</span>
+      <span>R</span>
+      <span>Y</span>
     </div>
     <div class="description">
-      <span>Nazwa Aulia</span>
+      <span>Rida Nurfitri Annisa</span>
     </div>
     <div class="button">
       <button>
